# SmartBallTracking_padel-vision-analytics-light

./: .env.example  .gitignore  README.md  auto-labeling-final.ipynb  comparadordemodelos.ipynb  pb1.ipynb  pb1.py  pyproject.toml
Assets/: extract_frames.ipynb
comparacion_modelos_ball/: reporte_analitico.html
src/: review_tool.py  validate_annotations.py
