[project]
name = "Ball_Training"
version = "0.1.0"
description = "Complemento del sistema de análisis de partidos de pádel mediante visión por computador y aprendizaje automático basado en videos de la cancha."
authors = [
  { name = "Santiago Peña Beltran", email = "Santiagopebe@unisabana.edu.co" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
  # Core
  "numpy>=2.0.0,<3.0.0",
  "opencv-python==4.11.0.86",
  "pyyaml>=6.0.0",
  "tqdm>=4.67.0",
  "python-dotenv>=1.0.1",

  # AI / Detection
  "ultralytics>=8.3.0",
  "sahi>=0.11.36",

  # PyTorch CUDA 12.8
  "torch>=2.7.0",
  "torchvision>=0.22.0",

  "roboflow",
  "sahi",
  "scikit-learn",

  
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
dev-dependencies = [
  "ipykernel>=6.29.0",
  "jupyter>=1.1.0",
]